# prompted

./: .gitignore  Cargo.toml
src/: component.rs  components.rs  lib.rs  main.rs  prompt.rs
src/components/: git.rs  hostname.rs  logname.rs  path.rs
