[package]
name = "prompted"
version = "0.1.0"
description = "An overkill command prompt library and application"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gethostname = "0.2.3"
subprocess = "0.2.9"
git_status_parser = "0.1"
log = "0.4"
simple_logger = "2.3"
